# scriptmoji

./: .gitignore  README.md  pyproject.toml  test.moji
emoscript/: __main__.py  args.py  interpreter.py
old/: argarser.py  lexer.py  shell.py  yacc.py
scriptmoji/: __main__.py
scriptmoji/cli/: argparser.py  shell.py
scriptmoji/lexer/: lexer.py
scriptmoji/parser/: yacc.py
scriptmoji/runtime/: executor.py  node.py
scriptmoji/utils/: cli.py  config.py  debug.py  emoji.py  helpers.py
tests/: test_lexer.py
